# nxdk_ftp_client_lib

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
cmake/modules/: FindNXDK.cmake
sample/: CMakeLists.txt  configure.h.in  main.cpp
src/: CMakeLists.txt  configure.h.in  ftp_client.c  ftp_client.h
tests/host/: CMakeLists.txt  guard_flag.h  test_ftp_client.cpp
tests/host/stubs/net/lwip/: errno.h  inet.h  sockets.h
tests/host/stubs/nxdk/: net.h
